the ok full file for production

--- a/GameLoop/app.json
+++ b/GameLoop/app.json
@@ -13,9 +13,10 @@
     },
     "android": {
       "adaptiveIcon": {
-        "foregroundImage": "./assets/images/adaptive-icon.png",
+        "backgroundImage": "./assets/images/splash-icon01.png",
         "backgroundColor": "#ffffff"
-      }
+      },
+      "package": "com.smh125.GameLoop"
     },
     "web": {
       "bundler": "metro",
@@ -36,6 +37,15 @@
     ],
     "experiments": {
       "typedRoutes": true
-    }
+    },
+    "extra": {
+      "router": {
+        "origin": false
+      },
+      "eas": {
+        "projectId": "82c5bd2c-7ba8-4c38-a9b3-900c292660ef"
+      }
+    },
+    "owner": "smh125"
   }
 }
